--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,13 @@
       user-select: none;
     }
 
+    .activeButton {
+      background: #00449E;
+      color: #F4F4F4;
+    }
+
     button:hover {
-      background-color: #00449E;
+      background: #00449E;
       color: #F4F4F4;
     }
 
@@ -46,4 +51,8 @@
   <body>
     <div id='app'></div>
   </body>
+
+  <script
+    src='https://kit.fontawesome.com/0db9b2eb32.js'
+    crossorigin='anonymous'></script>
 </html>
