design: Cursive font

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name='description' content='Tic Tac Toe'>
     <meta name='keywords' content='Tic-Tac-Toe, Web Games'>
     <meta name='author' content='eldarlrd'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patrick+Hand'>
     <link rel='icon' href='favicon.png'>
     <title>Tic Tac Toe</title>
   </head>
@@ -13,8 +14,8 @@
   <style>
     :root {
       scroll-behavior: smooth;
-      cursor: default;
       user-select: none;
+      cursor: default;
     }
 
     .activeButton {
