feat: Mode switcher function

--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
       cursor: default;
     }
 
-    .activeButton {
-      background: #00449E;
-      color: #F4F4F4;
+    .active-button {
+      background: #00449E !important;
+      color: #F4F4F4 !important;
     }
 
     button:hover {
