--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <meta name='description' content='Tic Tac Toe'>
-    <meta name='keywords' content='Tic-Tac-Toe, Web Games'>
-    <meta name='author' content='eldarlrd'>
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patrick+Hand'>
-    <link rel='icon' href='favicon.png'>
+    <meta name='description' content='A classic Tic Tac Toe game'>
+    <meta name='keywords' content='tic-tac-toe, web games'>
+    <meta name='author' content='Eldar Pashazade'>
+    <meta name='theme-color' content='#00449e'>
+    <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Patrick+Hand'>
+    <link rel='manifest' type='application/manifest+json' href='site.webmanifest'>
+    <link rel='icon' type='image/png' sizes='512x512' href='favicon.png'>
     <title>Tic Tac Toe</title>
   </head>
 
@@ -18,9 +20,14 @@
       cursor: default;
     }
 
+    .active-button {
+      background: #00449e !important;
+      color: #f4f4f4 !important;
+    }
+
     button:hover {
-      background: #00449E;
-      color: #F4F4F4;
+      background: #00449e;
+      color: #f4f4f4;
     }
 
     button:hover:active {
@@ -50,5 +57,6 @@
 
   <script
     src='https://kit.fontawesome.com/0db9b2eb32.js'
+    type='application/javascript'
     crossorigin='anonymous'></script>
 </html>
