feat: PvE Random

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name='description' content='A classic Tic Tac Toe game'>
-    <meta name='keywords' content='tic-tac-toe, web games'>
+    <meta name='keywords' content='tic-tac-toe, web game'>
     <meta name='author' content='Eldar Pashazade'>
     <meta name='theme-color' content='#00449e'>
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Patrick+Hand'>
